# libesprom

./: README.md
src/: CMakeLists.txt  embedded_file.c  embedded_file.h  esprom.c  libesprom.h  memchunk.c  memchunk.h
